# Atagia

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  activation_flags.py  artifact_hash.py  audit_ingest_health.py  base.py  broad_list_coverage.py  custody_report.py  custody_summary.py  exact_product_prompt_replay.py  failure_taxonomy.py  fixed_context_answer_quality.py  ingest_health.py  json_artifacts.py  llm_config.py  llm_metrics.py  llm_run_guard.py  migration_metadata.py  numeric_summary.py  optimization_compare.py  output_root.py  report_aggregate.py  report_diff.py  retained_db_paths.py  retrieval_custody.py  scorer.py  source_evidence.py  trusted_eval.py
docs/: API.md  BEYOND_HUMAN_MEMORY.md  Beyond_Similarity_Applicability_Governed_Memory.md  CONFIGURATION_REFERENCE.md  HOST_SIDECAR_INTEGRATION.md
integrations/: README.md
manifests/: biographical_interview.json  brainstorm.json  coding_debug.json  companion.json  general_qa.json  intimacy.json  personal_assistant.json  research_deep_dive.json
migrations/: 0003_add_memory_extraction_hash.sql  0005_add_summary_views_model.sql  0007_add_evaluation_metrics.sql  0008_add_messages_occurred_at.sql  0009_add_belief_tension.sql  0011_add_index_text.sql  0012_add_hierarchy_support.sql  0013_add_natural_memory_fields.sql  0015_add_mode_privacy_ceiling.sql  0016_add_language_profile.sql  0017_add_conversation_activity.sql  0021_add_conversation_topics.sql  0031_add_memory_redesign_identity.sql  0032_summary_character_rollups.sql  0033_add_artifact_redesign_identity.sql  (+7 more)
(+554 files in other folders)
