[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atagia"
version = "0.1.0"
description = "Applicability-governed memory engine for AI assistants."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiosqlite>=0.20,<1.0",
  "anthropic>=0.86,<1.0",
  "fastapi>=0.115,<1.0",
  "google-genai>=1.73.1,<2.0",
  "httpx>=0.28,<1.0",
  "openai>=1.0,<2.0",
  "orjson>=3.10,<4.0",
  "pydantic>=2.10,<3.0",
  "python-dotenv>=1.0,<2.0",
  "redis>=5.2,<6.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
]
mcp = [
  "mcp>=1.20,<2.0",
]
embeddings = [
  "sqlite-vec>=0.1.6",
]

[project.scripts]
atagia-mcp = "atagia.mcp_server:main"
atagia-embeddings-backfill = "atagia.embedding_backfill_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"atagia._vendor" = ["AI_JSON_CLEANROOM_LICENSE.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
